--- a/index.css
+++ b/index.css
@@ -4,14 +4,21 @@ body {
     padding: 0;
     font-family: 'Rubik', sans-serif;
     background-color: #EEF0F4;
+    color: #432000;
+    user-select: none;
+    background-image: url(assets/background.jpeg);
+    background-position: center;  
+    background-repeat: no-repeat;  
+    background-size: fixed;
 }
 
 .container {
     display: flex;
     flex-direction: column;
     max-width: 320px;
-    margin: 30px auto;
-}
+    margin: 30px auto; 
+    
+}   
 
 img {
     width: 150px;
@@ -41,6 +48,11 @@ button {
     font-family: 'Rubik', sans-serif;
 }
 
+button:hover {
+    cursor: pointer;
+    background-color: #432000;
+}
+
 ul {
     list-style-type: none;
     padding: 0;
@@ -57,5 +69,9 @@ ul li {
     flex-grow: 1;
     text-align: center;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+}
 
+ul li:hover {
+    cursor: pointer;
+    background-color: #FFECC7;
 }
